--- a/my_personal_website/package.json
+++ b/my_personal_website/package.json
@@ -18,8 +18,11 @@
     "@types/react-router-dom": "^5.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-simple-typewriter": "^5.0.1",
+    "react-typed": "^1.2.0",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
   },
