Updated portofolio with new changes

--- a/my_personal_website/package.json
+++ b/my_personal_website/package.json
@@ -2,7 +2,7 @@
     "homepage": "https://Navaraj-Poudel.github.io/Personal_Website",
     "name": "my_personal_website",
     "version": "0.1.0",
-    "private":false,
+    "private": false,
     "dependencies": {
         "@emailjs/browser": "^3.11.0",
         "@emotion/react": "^11.11.0",
@@ -18,6 +18,8 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "@types/react-router-dom": "^5.3.3",
+        "ajv": "^8.17.1",
+        "ajv-keywords": "^5.1.0",
         "aos": "^2.3.4",
         "emailjs": "^4.0.2",
         "gh-pages": "^5.0.0",
