--- a/my_personal_website/package.json
+++ b/my_personal_website/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://Navaraj-Poudel.github.io/Personal_Website",
+    "homepage": "https://www.poudelnavaraj.com.np",
     "name": "my_personal_website",
     "version": "0.1.0",
     "private": false,
